--- a/DOGE_CuDNNLSTM.ipynb
+++ b/DOGE_CuDNNLSTM.ipynb
@@ -485,7 +485,7 @@
         "outputId": "18447ea9-fced-4aaf-f262-a1946323578c"
       },
       "source": [
-        "#to check whether any value is nan or not funct will return false or true\n",
+        "#to check whether any value is NAN or not funct will return false or true\n",
         "np.isnan(scaled_close).any()"
       ],
       "execution_count": 33,
